<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <!-- Normal portrait layout -->

    <!--This invisible view steals the initial focus so the keyboard
      doesn't pop up on start, but allows the ListView to be
      focused normally via D-pad.-->
    <View
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <AutoCompleteTextView
            android:id="@+id/search_query"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@android:string/search_go"
            android:layout_weight="1"
            android:saveEnabled="false"
            android:singleLine="true"
            android:imeOptions="actionSearch"
            android:maxLength="100"/>

        <ImageButton
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:src="@android:drawable/ic_menu_search"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:visibility="gone"/>

    <LinearLayout
        android:id="@+id/no_popular"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@drawable/rounded_background"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_popular"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_popular_"/>
    </LinearLayout>

    <TextView
        android:id="@+id/empty_videos"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:text="@string/no_videos"
        android:textSize="18sp"
        android:visibility="gone" />

    <ListView
        android:id="@+id/videos"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:clipToPadding="false"
        android:scrollbarStyle="outsideOverlay"
        tools:listitem="@layout/item_video"
        android:clickable="true"
        android:choiceMode="none" />
</LinearLayout>